Split island queries from raw core API